[tool.poetry]
name = "algo-python"
version = "0.1.0"
description = ""
authors = ["msv <msvgithub@gmail.com>"]
readme = "README.md"
packages = [{include = "algo_python"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

